# Cloudflare-Cache-Preloader

./: .gitignore  README.md  pyproject.toml  skills-lock.json
.claude/skills/gh-cli/: SKILL.md
.github/workflows/: ci.yml  preload.yml
config/: sites.example.yml  sites.yml
src/preloader/: __main__.py  cli.py  config.py  fetcher.py  runner.py  sitemap.py  summary.py
tests/: conftest.py  test_fetcher.py  test_sitemap.py  test_summary.py
tests/fixtures/: sitemapindex.xml  sub1.xml  urlset.xml
