[project]
name = "cloudflare-cache-preloader"
version = "0.1.0"
description = "Pre-warm Cloudflare edge cache by fetching all sitemap URLs for configured sites."
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "defusedxml>=0.7.1",
    "pydantic>=2.6",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44"]
impersonate = ["curl_cffi>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
cloudflare-preloader = "preloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/preloader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: hits real network; opt-in"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
